force-app/main/default/objects/ApexJob__c/ApexJob__c.object-meta.xml
<CustomObject>
    <label>Apex Job</label>
    <nameField>
        <displayFormat>APJ-{0000}</displayFormat>
        <label>Apex Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>