force-app/main/default/objects/ApexJob__c/fields/ApexJobID__c.field-meta.xml
<CustomField>
    <fullName>ApexJobID__c</fullName>
    <label>Apex Job ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>