force-app/main/default/objects/ApexJob__c/fields/ApexJobRun__c.field-meta.xml
<CustomField>
    <fullName>ApexJobRun__c</fullName>
    <label>Apex Job Run</label>
    <referenceTo>ApexJobRun__c</referenceTo>
    <relationshipLabel>Apex Jobs</relationshipLabel>
    <relationshipName>Apex_Jobs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>