force-app/main/default/objects/ApexJob__c/fields/BatchesProcessed__c.field-meta.xml
<CustomField>
    <fullName>BatchesProcessed__c</fullName>
    <label>Batches Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>