force-app/main/default/objects/ApexJob__c/fields/CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>CompletionDate__c</fullName>
    <label>Completion Date</label>
    <type>DateTime</type>
</CustomField>