force-app/main/default/objects/ApexJob__c/fields/LinkedToSystemMonitor__c.field-meta.xml
<CustomField>
    <fullName>LinkedToSystemMonitor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Linked To System Monitor</label>
    <type>Checkbox</type>
</CustomField>