force-app/main/default/objects/ApexJob__c/fields/StatusDetail__c.field-meta.xml
<CustomField>
    <fullName>StatusDetail__c</fullName>
    <label>Status Detail</label>
    <type>TextArea</type>
</CustomField>