force-app/main/default/objects/ApexJob__c/fields/SubmittedBy__c.field-meta.xml
<CustomField>
    <fullName>SubmittedBy__c</fullName>
    <label>Submitted By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>