force-app/main/default/objects/ApexJob__c/fields/TotalBatches__c.field-meta.xml
<CustomField>
    <fullName>TotalBatches__c</fullName>
    <label>Total Batches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>